--- a/12/BridgeControl/BridgeControl/Settings.bundle/Root.plist
+++ b/12/BridgeControl/BridgeControl/Settings.bundle/Root.plist
@@ -10,21 +10,29 @@
 			<key>Type</key>
 			<string>PSGroupSpecifier</string>
 			<key>Title</key>
-			<string>Group</string>
+			<string>General Info</string>
 		</dict>
 		<dict>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
-			<string>Name</string>
+			<string>Commanding Officer </string>
 			<key>Key</key>
-			<string>name_preference</string>
-			<key>DefaultValue</key>
-			<string></string>
+			<string>officer </string>
+			<key>AutocapitalizationType</key>
+			<string>Words</string>
+			<key>AutocorrectionType</key>
+			<string>No</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSTextFieldSpecifier</string>
+			<key>Title</key>
+			<string>Authorization Code</string>
+			<key>Key</key>
+			<string>authorizationCode</string>
 			<key>IsSecure</key>
-			<false/>
-			<key>KeyboardType</key>
-			<string>Alphabet</string>
+			<true/>
 			<key>AutocapitalizationType</key>
 			<string>None</string>
 			<key>AutocorrectionType</key>
@@ -32,29 +40,79 @@
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>Rank</string>
+			<key>Key</key>
+			<string>rank</string>
+			<key>DefaultValue</key>
+			<string>Ensign</string>
+			<key>Titles</key>
+			<array>
+				<string>Ensign</string>
+				<string>Lieutenant</string>
+				<string>Lieutenant Commander</string>
+				<string>Commander</string>
+				<string>Captain</string>
+				<string>Commodore</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<string>Ensign</string>
+				<string>Lieutenant</string>
+				<string>Lieutenant Commander</string>
+				<string>Commander</string>
+				<string>Captain</string>
+				<string>Commodore</string>
+			</array>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Enabled</string>
+			<string>Wrap Drive</string>
 			<key>Key</key>
-			<string>enabled_preference</string>
+			<string>wrap</string>
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
 		<dict>
 			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Wrap Factor</string>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSSliderSpecifier</string>
 			<key>Key</key>
-			<string>slider_preference</string>
+			<string>wrapFactor</string>
 			<key>DefaultValue</key>
-			<real>0.5</real>
+			<integer>5</integer>
 			<key>MinimumValue</key>
-			<integer>0</integer>
-			<key>MaximumValue</key>
 			<integer>1</integer>
-			<key>MinimumValueImage</key>
-			<string></string>
+			<key>MaximumValue</key>
+			<integer>10</integer>
 			<key>MaximumValueImage</key>
+			<string>rabbit</string>
+			<key>MinimumValueImage</key>
+			<string>turtle</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Additional Info</string>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSChildPaneSpecifier</string>
+			<key>Title</key>
+			<string>More Settings</string>
+			<key>Key</key>
 			<string></string>
+			<key>File</key>
+			<string>More</string>
 		</dict>
 	</array>
 </dict>
